--- a/static/main.css
+++ b/static/main.css
@@ -13,95 +13,132 @@ body{
     white-space: pre;  
 }
 
-#btnModConfig svg{
+.configIcon {
     fill:rgba(68, 68, 68, 0.3)
 }
 
-#btnModConfig svg:hover{
+.configIcon svg:hover{
     fill:rgba(68, 68, 68, 0.7)
 }
 
 
 
-/* change plotly look and feel (marking rectangle) */
-.selectionlayer{display: none;}
-
-rect.cursor-ew-resize,rect.cursor-ns-resize  {display: none;}
 
 
 
 /* configuration dialog */
 #form .btn:focus{outline:none;border:none;box-shadow: none;}
 
-#form{margin:1em;}
-.fas.fa-caret-right::after{content: "▷";} /*➕*/
-.fas.fa-caret-down::after{content: "▽";} /*➖*/
-.fas.fa-caret-right,.fas.fa-caret-down{
-    font-style: normal;
-	font-size:15px;
-}
-[type=button][title=Expand],[type=button][title=Collapse] {
-    cursor: pointer;
-    border-radius: 25px;
-    height: 25px;
-    width: 25px;
-    padding: 0;	
-    font-style:bolder;
+#form{
+    margin:1em;
+    padding:1em;
 }
 
+
+
+/* background-color: #ececec;
+border: 1px solid #b9b9b9;
+width: 300px;
+overflow-y: auto;
+overflow-x: hidden;
+box-shadow: #d7d7d7 2px 5px 10px 0px;
+padding: 0 1em 1em 1em; */
+
 #form {
-    background-color: #ececec;
-    border: 1px solid #b9b9b9;
-    width: 300px;
     position: fixed;
-    right: 0px;
-    top: -15px;
     z-index: 10;
-    overflow-y: auto;
-    overflow-x: hidden;
-    box-shadow: #d7d7d7 2px 5px 10px 0px;
-    padding: 0 1em 1em 1em;
+    right: 0px;
+    top: 5px;
+    
+    width:fit-content;
+    background:white;
+    border:1px solid black;  
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-color: #D8D9DC;
+    border-right-color: #D8D9DC;
+    border-bottom-color: #D8D9DC;
+    border-left-color: #D8D9DC;
+    background-color: #FFFFFF;
+    padding-left:50px;
+
 }
 .fromCloseBtn {
     position: absolute;
     right: 15px;
-    margin: 10px;
+    top: 10px;
+    margin: 15px;
     cursor: pointer;
     z-index: 30;
 }
 
-/* tabs */
-[role="presentation"] {
-    padding: 0px 5px 0px 5px;
-    background: #e1e1e1;
-    border: 1px outset darkgray;
-    margin: -1px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    font-size: 15px;
-}
-[role="presentation"]:hover {
-    background: #c0c0c0;
-}
 
-[role="presentation"] a:hover {
-    text-decoration: none;
-}
-[role="presentation"] a {
-    color:gray;
-}
-[role="presentation"].active a {
-    color:black;
-    font-weight: bold;
+#form h3{
+    font-size: inherit;
+    margin-left:-30px;
 }
 
 
-[role="presentation"].active {
-    background:#f9f9f9;
+.RoundedDropShadow {
+    box-shadow: 0 3px 11px 0 rgba(0,0,0,.16),0 3px 6px 0 rgba(0,0,0,.16);
+    border-radius: 6px;
 }
 
-#form h3{display: none;}
-
-#form .tab-pane{
-    padding: 1em;
+#form button, .whiteButton {
+    border: 1px solid #c9c9c9;
+    border-radius: 3px;
+    color: #fff;
+    line-height: 1;
+    cursor: pointer;
+    background: linear-gradient(#fff,#f1f1f1);
+    border-bottom-color: #b3b3b3;
+    color: #000;
+    font-size: 12px;
+    padding: 4px;
+    border-radius: 0;
 }
+
+#form .row:nth-child(6):before {
+    content: "";
+    border-bottom: 1px solid #D8D9DC;
+    text-align: center;
+    width: 90%;
+    margin:15px 0 20px 0;
+}
+
+/* change plotly look and feel (marking rectangle) to fit spotfire style*/
+.selectionlayer, rect.cursor-ew-resize,rect.cursor-ns-resize  {display: none;}
+
+.select-outline{
+    fill:#4a64cd42 !important;
+    stroke:black !important;
+    stroke-dasharray:0 !important;
+    /* display: none !important; */
+}
+
+/* warning dialog */
+#warningDialog {
+    position: fixed;
+    background: rgba(68, 68, 68, 0.3);
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    display: grid;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+#warningDialog span {
+    background: white;
+    color: black;
+    text-align: center;
+    display: grid;
+    padding: 10px;
+    border: 1px solid gray;
+}
+
+
