Bug and fixes ready for review. Export PDF pending

--- a/static/main.css
+++ b/static/main.css
@@ -7,16 +7,19 @@
 body{ 
     margin: 0;
     overflow: hidden;
+    background-color:unset !important;
 }
 
 .configIcon {
-    fill:rgba(68, 68, 68, 0.3)
+    fill:rgba(68, 68, 68, 0.3);
+    top:15px !important;
+    right: 25px !important;
+    position: fixed !important;
 }
 
 .configIcon svg:hover{
     fill:rgba(68, 68, 68, 0.7)
 }
-
 
 
 
@@ -60,6 +63,11 @@ padding: 0 1em 1em 1em; */
     background-color: #FFFFFF;
     padding-left: 40px;
     padding-right: 25px;
+
+    font-size: 15px !important;
+    font-family: "Roboto", Arial, Helvetica, sans-serif !important;
+    font-weight: normal !important;
+
 }
 
 .fromCloseBtn {
@@ -131,7 +139,7 @@ padding: 0 1em 1em 1em; */
     stroke-dasharray:0 !important;
     /* display: none !important; */
 }
-
+ 
 /* warning dialog */
 #warningDialog {
     position: fixed;
@@ -159,6 +167,101 @@ padding: 0 1em 1em 1em; */
 .infolayer g{
     transform-box: fill-box;
     transform-origin: right;
+}
+
+
+/*custom error*/
+.error-layout {
+    display: flex;
+    width: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    text-align: center;
+}
+
+.spotfire-button-blue:hover {
+    background-color: #5d6efa;
+}
+.error-container {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.error-text {
+    margin: auto;
+    padding: 8px;
+}
+.warning-row {
+    margin-top: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+    white-space: pre-line;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.spotfire-button-flex {
+    height: 32px;
+    min-width: 112px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 32px;
+    cursor: pointer;
+    padding-left: 16px;
+    padding-right: 16px;
+    box-sizing: border-box;
+    margin: 4px 8px;
+}
+.spotfire-button-text {
+    font: bold 13px "Roboto";
+    display: inline;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.spotfire-button-blue {
+    background-color: #7289f9;
+    color: #ffffff;
+}
+
+.spotfire-button-white {
+    color: #313336;
+    background-color: #ffffff;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #d1d4de;
+}
+
+/*override plotly.js-style-global*/
+.js-plotly-plot .plotly .cursor-crosshair {
+    cursor: default !important;
+}
+
+.ttip{
+    position: absolute;
+    right: 100px;
+}
+
+.ttip:hover::after{
+    position: absolute;
+    right: 0;
+    top: 24px;
+    min-width: 100px;
+    border: 1px #aaaaaa solid;
+    border-radius: 10px;
+    background-color: #ffffcc;
+    padding: 12px;
+    color: #000000;
+    font-size: 14px;
+    z-index: 1;
+    content: attr(tooltip);
 }
 
 
