--- a/static/main.css
+++ b/static/main.css
@@ -139,6 +139,8 @@ padding: 0 1em 1em 1em; */
     stroke-dasharray:0 !important;
     /* display: none !important; */
 }
+.zoombox-corners{display:none}
+
  
 /* warning dialog */
 #warningDialog {
